--- a/src/components/blocks/element-grid/__like/_active/element-grid__like_active.css
+++ b/src/components/blocks/element-grid/__like/_active/element-grid__like_active.css
@@ -1,4 +1,4 @@
 .element-grid__like_active {
-  background-image: url(../../../../images/like_active.png);
+  background-image: url(../../../../images/icon/like_active.png);
   background-repeat: no-repeat;
 }
