--- a/src/components/blocks/element-grid/__like/element-grid__like.css
+++ b/src/components/blocks/element-grid/__like/element-grid__like.css
@@ -1,7 +1,7 @@
 .element-grid__like {
   width: 30px;
   height: 19px;
-  background: url('../../../images/like.svg') center no-repeat;
+  background: url('../../../images/icon/like.svg') center no-repeat;
   font-size: 0;
   cursor: pointer;
   border: 0;
