--- a/src/components/blocks/popup/__close/popup__close.css
+++ b/src/components/blocks/popup/__close/popup__close.css
@@ -4,7 +4,7 @@
   right: -50px;
   height: 40px;
   width: 40px;
-  background: url('../../../images/popup__close.svg') center no-repeat;
+  background: url('../../../images/icon/popup__close.svg') center no-repeat;
   font-size: 0; /* Скрываем текст */
   border: none;
   cursor: pointer;
