--- a/src/components/blocks/profile/__avatar-btn/profile__avatar-btn.css
+++ b/src/components/blocks/profile/__avatar-btn/profile__avatar-btn.css
@@ -1,5 +1,5 @@
 .profile__avatar-btn {
-  background-image: url("../../../images/avatar-edit-btn.svg");
+  background-image: url("../../../images/icon/avatar-edit-btn.svg");
   width: 120px;
   height: 120px;
   border-radius: 50%;
