--- a/src/blocks/popup/__input-error/popup__input-error.css
+++ b/src/blocks/popup/__input-error/popup__input-error.css
@@ -1,11 +1,11 @@
 .popup__input-error {
+    padding-top: 5px;
+    display: block;
+    box-sizing: border-box;
+    min-height: 36px;
+    color: #FF0000;
     font-size: 12px;
-    color: red;
-    opacity: 0;
-    position: absolute;
-    top: calc(100% + 5px);
-    left: 0;
-    transition: 0.3s;
+    line-height: 15px;
+    font-weight: 400;
+    visibility: hidden;
 }
-
-
